--- a/Excercises/Excercise-3.ipynb
+++ b/Excercises/Excercise-3.ipynb
@@ -8,7 +8,8 @@
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
-    "from sklearn import linear_model"
+    "from sklearn import linear_model\n",
+    "import math"
    ]
   },
   {
@@ -106,6 +107,7 @@
     }
    ],
    "source": [
+    "# Load dataset\n",
     "df = pd.read_csv(\"/Users/jacobfrancis/dev/csc180/csv/homeprices4c.csv\")\n",
     "df"
    ]
@@ -113,74 +115,6 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "np.float64(4.0)"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df.bedrooms.median()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "4"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "import math\n",
-    "median_bedrooms = math.floor(df.bedrooms.median())\n",
-    "median_bedrooms"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0    3.0\n",
-       "1    4.0\n",
-       "2    4.0\n",
-       "3    3.0\n",
-       "4    5.0\n",
-       "5    6.0\n",
-       "Name: bedrooms, dtype: float64"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df.bedrooms.fillna(median_bedrooms)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -267,19 +201,21 @@
        "5  4100       6.0    8  810000"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# Handle missing values in 'bedrooms'\n",
+    "median_bedrooms = math.floor(df.bedrooms.median())\n",
     "df.bedrooms = df.bedrooms.fillna(median_bedrooms)\n",
     "df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -870,138 +806,69 @@
        "LinearRegression()"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# Create and train multiple linear regression model\n",
     "reg = linear_model.LinearRegression()\n",
-    "reg.fit(df[['area','bedrooms','age']],df.price)"
+    "reg.fit(df[['area', 'bedrooms', 'age']], df.price)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "array([  112.06244194, 23388.88007794, -3231.71790863])"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Coefficients: [  112.06244194 23388.88007794 -3231.71790863]\n",
+      "Intercept: 221323.00186540402\n"
+     ]
     }
    ],
    "source": [
-    "reg.coef_"
+    "# Model parameters\n",
+    "print(\"Coefficients:\", reg.coef_)\n",
+    "print(\"Intercept:\", reg.intercept_)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "np.float64(221323.00186540402)"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "reg.intercept_"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Prediction (3000, 3, 40): 498408.25158030685\n",
+      "Prediction (3000, 3, 15): 579201.199296131\n",
+      "Prediction (2500, 4, 5): 578876.0374893326\n"
+     ]
+    },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
       "/Library/Frameworks/Python.framework/Versions/3.11/lib/python3.11/site-packages/sklearn/utils/validation.py:2749: UserWarning: X does not have valid feature names, but LinearRegression was fitted with feature names\n",
-      "  warnings.warn(\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "array([498408.25158031])"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "reg.predict([[3000,3,40]])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
+      "  warnings.warn(\n",
+      "/Library/Frameworks/Python.framework/Versions/3.11/lib/python3.11/site-packages/sklearn/utils/validation.py:2749: UserWarning: X does not have valid feature names, but LinearRegression was fitted with feature names\n",
+      "  warnings.warn(\n",
       "/Library/Frameworks/Python.framework/Versions/3.11/lib/python3.11/site-packages/sklearn/utils/validation.py:2749: UserWarning: X does not have valid feature names, but LinearRegression was fitted with feature names\n",
       "  warnings.warn(\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "array([579201.19929613])"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
-    "reg.predict([[3000,3,15]])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Library/Frameworks/Python.framework/Versions/3.11/lib/python3.11/site-packages/sklearn/utils/validation.py:2749: UserWarning: X does not have valid feature names, but LinearRegression was fitted with feature names\n",
-      "  warnings.warn(\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "array([578876.03748933])"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "reg.predict([[2500,4,5]])"
+    "# Make predictions\n",
+    "print(\"Prediction (3000, 3, 40):\", reg.predict([[3000, 3, 40]])[0])\n",
+    "print(\"Prediction (3000, 3, 15):\", reg.predict([[3000, 3, 15]])[0])\n",
+    "print(\"Prediction (2500, 4, 5):\", reg.predict([[2500, 4, 5]])[0])"
    ]
   }
  ],
