--- a/Excercises/Excercise-4.ipynb
+++ b/Excercises/Excercise-4.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -117,49 +117,41 @@
        "7     eleven         7.0                8      80000"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# Load dataset\n",
     "df = pd.read_csv(\"/Users/jacobfrancis/dev/csc180/csv/hiring.csv\")\n",
     "df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Map text experience values to numbers\n",
     "exp_map = {\n",
-    "    'zero': 0,\n",
-    "    'one': 1,\n",
-    "    'two': 2,\n",
-    "    'three': 3,\n",
-    "    'four': 4,\n",
-    "    'five': 5,\n",
-    "    'six': 6,\n",
-    "    'seven': 7,\n",
-    "    'eight': 8,\n",
-    "    'nine': 9,\n",
-    "    'ten': 10,\n",
-    "    'eleven': 11,\n",
-    "    'twelve': 12\n",
+    "    'zero': 0, 'one': 1, 'two': 2, 'three': 3, 'four': 4,\n",
+    "    'five': 5, 'six': 6, 'seven': 7, 'eight': 8,\n",
+    "    'nine': 9, 'ten': 10, 'eleven': 11, 'twelve': 12\n",
     "}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/dw/z64d0vtd5vs7_g284pwdvgv80000gn/T/ipykernel_81814/1581606175.py:1: FutureWarning: Downcasting object dtype arrays on .fillna, .ffill, .bfill is deprecated and will change in a future version. Call result.infer_objects(copy=False) instead. To opt-in to the future behavior, set `pd.set_option('future.no_silent_downcasting', True)`\n",
+      "/var/folders/dw/z64d0vtd5vs7_g284pwdvgv80000gn/T/ipykernel_83102/723240834.py:2: FutureWarning: Downcasting object dtype arrays on .fillna, .ffill, .bfill is deprecated and will change in a future version. Call result.infer_objects(copy=False) instead. To opt-in to the future behavior, set `pd.set_option('future.no_silent_downcasting', True)`\n",
       "  df['experience'] = df['experience'].map(exp_map).fillna(df['experience'])\n"
      ]
     },
@@ -263,25 +255,16 @@
        "7        11.0         7.0                8      80000"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# Convert text experience to numeric and handle missing values\n",
     "df['experience'] = df['experience'].map(exp_map).fillna(df['experience'])\n",
     "df['experience'] = pd.to_numeric(df['experience'], errors='coerce')\n",
     "df"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "median_exp = math.floor(df['experience'].median())\n",
-    "median_test = math.floor(df['test_score'].median())"
    ]
   },
   {
@@ -395,6 +378,9 @@
     }
    ],
    "source": [
+    "# Fill missing values with median\n",
+    "median_exp = math.floor(df['experience'].median())\n",
+    "median_test = math.floor(df['test_score'].median())\n",
     "df['experience'] = df['experience'].fillna(median_exp)\n",
     "df['test_score'] = df['test_score'].fillna(median_test)\n",
     "df"
@@ -999,8 +985,9 @@
     }
    ],
    "source": [
+    "# Train model\n",
     "reg = linear_model.LinearRegression()\n",
-    "reg.fit(df[['experience', 'test_score', 'interview_score']], df['salary($)'])\n"
+    "reg.fit(df[['experience', 'test_score', 'interview_score']], df['salary($)'])"
    ]
   },
   {
@@ -1017,26 +1004,32 @@
       "/Library/Frameworks/Python.framework/Versions/3.11/lib/python3.11/site-packages/sklearn/utils/validation.py:2749: UserWarning: X does not have valid feature names, but LinearRegression was fitted with feature names\n",
       "  warnings.warn(\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "(np.float64(47056.91056910568), np.float64(88227.64227642279))"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Candidate 1: 2 years exp, 9 test score, 6 interview\n",
-    "cand1 = reg.predict([[2, 9, 6]])\n",
-    "\n",
-    "# Candidate 2: 12 years exp, 10 test score, 10 interview\n",
-    "cand2 = reg.predict([[12, 10, 10]])\n",
-    "\n",
-    "cand1[0], cand2[0]\n"
+    "# Make predictions for candidates\n",
+    "cand1 = reg.predict([[2, 9, 6]])[0]\n",
+    "cand2 = reg.predict([[12, 10, 10]])[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Candidate 1 (2 yrs, test 9, interview 6): 47056.91056910568\n",
+      "Candidate 2 (12 yrs, test 10, interview 10): 88227.64227642279\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Print results\n",
+    "print(\"Candidate 1 (2 yrs, test 9, interview 6):\", cand1)\n",
+    "print(\"Candidate 2 (12 yrs, test 10, interview 10):\", cand2)"
    ]
   }
  ],
