--- a/Excercises/Excercise-5.ipynb
+++ b/Excercises/Excercise-5.ipynb
@@ -2,18 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "from sklearn import linear_model\n",
-    "import numpy as py\n"
+    "import numpy as np"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -121,19 +121,20 @@
        "9    paul    67  73"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# Load dataset\n",
     "df = pd.read_csv(\"/Users/jacobfrancis/dev/csc180/csv/test_scores.csv\")\n",
-    "df\n"
+    "df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -724,30 +725,22 @@
        "LinearRegression()"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# Train linear regression model\n",
     "reg = linear_model.LinearRegression()\n",
-    "reg.fit(df[['math']], df['cs'])\n"
+    "reg.fit(df[['math']], df['cs'])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Candidate 1 (math 60): 62.98\n",
-      "Candidate 2 (math 90): 93.51\n",
-      "Candidate 3 (math 20): 22.27\n"
-     ]
-    },
     {
      "name": "stderr",
      "output_type": "stream",
@@ -762,22 +755,33 @@
     }
    ],
    "source": [
-    "# Predict CS scores for candidates\n",
+    "# Predict CS scores for given math scores\n",
     "cand1 = reg.predict([[60]])[0]\n",
     "cand2 = reg.predict([[90]])[0]\n",
-    "cand3 = reg.predict([[20]])[0] \n",
-    "\n",
-    "print(f\"Candidate 1 (math 60): {cand1:.2f}\")\n",
-    "print(f\"Candidate 2 (math 90): {cand2:.2f}\")\n",
-    "print(f\"Candidate 3 (math 20): {cand3:.2f}\")\n"
+    "cand3 = reg.predict([[20]])[0]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Candidate 1 (math 60): 62.98\n",
+      "Candidate 2 (math 90): 93.51\n",
+      "Candidate 3 (math 20): 22.27\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Display predictions\n",
+    "print(f\"Candidate 1 (math 60): {cand1:.2f}\")\n",
+    "print(f\"Candidate 2 (math 90): {cand2:.2f}\")\n",
+    "print(f\"Candidate 3 (math 20): {cand3:.2f}\")"
+   ]
   }
  ],
  "metadata": {
