--- a/Excercises/Excercise-6.ipynb
+++ b/Excercises/Excercise-6.ipynb
@@ -2,66 +2,67 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
     "import math\n",
-    "from sklearn import linear_model\n"
+    "from sklearn import linear_model"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Load dataset\n",
     "df = pd.read_csv(\"/Users/jacobfrancis/dev/csc180/csv/test_scores.csv\")\n",
     "\n",
     "x = df['math'].values\n",
-    "y = df['cs'].values\n"
+    "y = df['cs'].values"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
+    "\n",
+    "# Implement gradient descent for simple linear regression\n",
     "def gradient_descent(x, y, learning_rate=0.0001, iterations=10000):\n",
     "    m_curr = b_curr = 0\n",
     "    n = len(x)\n",
-    "\n",
     "    prev_cost = float('inf')\n",
     "\n",
     "    for i in range(iterations):\n",
     "        y_predicted = m_curr * x + b_curr\n",
-    "\n",
     "        cost = (1/n) * sum((y - y_predicted) ** 2)\n",
     "\n",
     "        md = -(2/n) * sum(x * (y - y_predicted))\n",
     "        bd = -(2/n) * sum(y - y_predicted)\n",
     "\n",
-    "        m_curr = m_curr - learning_rate * md\n",
-    "        b_curr = b_curr - learning_rate * bd\n",
+    "        m_curr -= learning_rate * md\n",
+    "        b_curr -= learning_rate * bd\n",
     "\n",
-    "        # Stop if cost stops changing (very small difference)\n",
+    "        # Stop if cost no longer changes significantly\n",
     "        if math.isclose(cost, prev_cost, rel_tol=1e-20):\n",
     "            break\n",
     "\n",
     "        prev_cost = cost\n",
     "\n",
-    "        if i % 1000 == 0:  # print progress every 1000 steps\n",
+    "        if i % 1000 == 0:\n",
     "            print(f\"Iteration {i}: m={m_curr}, b={b_curr}, cost={cost}\")\n",
     "\n",
-    "    return m_curr, b_curr, cost\n"
+    "    return m_curr, b_curr, cost"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -87,17 +88,18 @@
     }
    ],
    "source": [
+    "# Run gradient descent\n",
     "m_gd, b_gd, final_cost = gradient_descent(x, y)\n",
     "\n",
     "print(\"\\nGradient Descent Results:\")\n",
     "print(\"Slope (m):\", m_gd)\n",
     "print(\"Intercept (b):\", b_gd)\n",
-    "print(\"Final Cost:\", final_cost)\n"
+    "print(\"Final Cost:\", final_cost)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -107,7 +109,29 @@
       "\n",
       "Scikit-Learn Results:\n",
       "Slope (m): 1.0177362378569328\n",
-      "Intercept (b): 1.9152193111569034\n",
+      "Intercept (b): 1.9152193111569034\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Compare with Scikit-Learn LinearRegression\n",
+    "reg = linear_model.LinearRegression()\n",
+    "reg.fit(df[['math']], df['cs'])\n",
+    "\n",
+    "print(\"\\nScikit-Learn Results:\")\n",
+    "print(\"Slope (m):\", reg.coef_[0])\n",
+    "print(\"Intercept (b):\", reg.intercept_)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "\n",
       "Difference:\n",
       "Slope diff: 0.023909150520590394\n",
@@ -116,24 +140,11 @@
     }
    ],
    "source": [
-    "reg = linear_model.LinearRegression()\n",
-    "reg.fit(df[['math']], df['cs'])\n",
-    "\n",
-    "print(\"\\nScikit-Learn Results:\")\n",
-    "print(\"Slope (m):\", reg.coef_[0])\n",
-    "print(\"Intercept (b):\", reg.intercept_)\n",
-    "\n",
+    "# Show difference between manual and library model\n",
     "print(\"\\nDifference:\")\n",
     "print(\"Slope diff:\", abs(m_gd - reg.coef_[0]))\n",
-    "print(\"Intercept diff:\", abs(b_gd - reg.intercept_))\n"
+    "print(\"Intercept diff:\", abs(b_gd - reg.intercept_))"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
