--- a/Excercises/Excercise-16.ipynb
+++ b/Excercises/Excercise-16.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,10 +14,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Load digits dataset\n",
     "digits = load_digits()\n",
     "X = digits.data\n",
     "y = digits.target"
@@ -25,16 +26,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Split data into training and testing sets (80/20)\n",
     "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -47,6 +49,7 @@
     }
    ],
    "source": [
+    "# Compare performance of different kernels\n",
     "kernels = ['linear', 'rbf']\n",
     "for kernel in kernels:\n",
     "    model = SVC(kernel=kernel)\n",
@@ -58,35 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# C and gamma values\n",
-    "best_acc = 0\n",
-    "best_params = {}"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "for C in [0.1, 1, 10, 100]:\n",
-    "    for gamma in [0.001, 0.01, 0.1, 1]:\n",
-    "        model = SVC(kernel='rbf', C=C, gamma=gamma)\n",
-    "        model.fit(X_train, y_train)\n",
-    "        y_pred = model.predict(X_test)\n",
-    "        acc = accuracy_score(y_test, y_pred)\n",
-    "        if acc > best_acc:\n",
-    "            best_acc = acc\n",
-    "            best_params = {'C': C, 'gamma': gamma}"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -100,6 +75,20 @@
     }
    ],
    "source": [
+    "# Tune hyperparameters (C and gamma) for RBF kernel\n",
+    "best_acc = 0\n",
+    "best_params = {}\n",
+    "\n",
+    "for C in [0.1, 1, 10, 100]:\n",
+    "    for gamma in [0.001, 0.01, 0.1, 1]:\n",
+    "        model = SVC(kernel='rbf', C=C, gamma=gamma)\n",
+    "        model.fit(X_train, y_train)\n",
+    "        y_pred = model.predict(X_test)\n",
+    "        acc = accuracy_score(y_test, y_pred)\n",
+    "        if acc > best_acc:\n",
+    "            best_acc = acc\n",
+    "            best_params = {'C': C, 'gamma': gamma}\n",
+    "\n",
     "print(\"Best Parameters Found:\")\n",
     "print(best_params)\n",
     "print(f\"Best Accuracy: {best_acc:.4f}\")"
@@ -107,21 +96,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Train final model using best parameters\n",
     "final_model = SVC(kernel='rbf', C=best_params['C'], gamma=best_params['gamma'])\n",
     "final_model.fit(X_train, y_train)\n",
     "y_pred_final = final_model.predict(X_test)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
