--- a/Excercises/Excercise-11.ipynb
+++ b/Excercises/Excercise-11.ipynb
@@ -18,15 +18,6 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
-   "outputs": [],
-   "source": [
-    "digits = load_digits()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -38,13 +29,15 @@
     }
    ],
    "source": [
+    "# Load digits dataset\n",
+    "digits = load_digits()\n",
     "print(\"Data shape:\", digits.data.shape)\n",
-    "print(\"Number of labels:\", len(digits.target))\n"
+    "print(\"Number of labels:\", len(digits.target))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -108,6 +101,7 @@
     }
    ],
    "source": [
+    "# Display first few digit images\n",
     "plt.gray()\n",
     "for i in range(5):\n",
     "    plt.matshow(digits.images[i])\n",
@@ -116,26 +110,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Split data\n",
     "X = digits.data\n",
-    "y = digits.target"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "y = digits.target\n",
     "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -826,19 +813,20 @@
        "LogisticRegression(max_iter=10000)"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# Train logistic regression model\n",
     "model = LogisticRegression(max_iter=10000)\n",
     "model.fit(X_train, y_train)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -850,21 +838,13 @@
     }
    ],
    "source": [
+    "# Evaluate model\n",
     "print(\"Model Score:\", model.score(X_test, y_test))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "y_pred = model.predict(X_test)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -886,13 +866,15 @@
     }
    ],
    "source": [
+    "# Confusion matrix\n",
+    "y_pred = model.predict(X_test)\n",
     "cm = confusion_matrix(y_test, y_pred)\n",
     "print(\"Confusion Matrix:\\n\", cm)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -907,6 +889,7 @@
     }
    ],
    "source": [
+    "# Visualize confusion matrix\n",
     "plt.figure(figsize=(10,7))\n",
     "sn.heatmap(cm, annot=True)\n",
     "plt.xlabel('Predicted')\n",
@@ -914,13 +897,6 @@
     "plt.title('Confusion Matrix for Digits Recognition')\n",
     "plt.show()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
