--- a/Excercises/Excercise-15.ipynb
+++ b/Excercises/Excercise-15.ipynb
@@ -13,7 +13,7 @@
     "from sklearn.linear_model import LogisticRegression\n",
     "from sklearn.svm import SVC\n",
     "from sklearn.ensemble import RandomForestClassifier\n",
-    "from sklearn.metrics import accuracy_score, classification_report\n",
+    "from sklearn.metrics import accuracy_score\n",
     "from sklearn.decomposition import PCA\n",
     "from scipy import stats"
    ]
@@ -160,6 +160,7 @@
     }
    ],
    "source": [
+    "# Load dataset\n",
     "df = pd.read_csv(\"/Users/jacobfrancis/dev/csc180/csv/heart.csv\")\n",
     "df.head()"
    ]
@@ -167,16 +168,6 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Calculate Z-scores\n",
-    "z_scores = np.abs(stats.zscore(df.select_dtypes(include=np.number)))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -189,7 +180,8 @@
     }
    ],
    "source": [
-    "# Keep only rows where all z-scores are less than 3\n",
+    "# Remove outliers using Z-score\n",
+    "z_scores = np.abs(stats.zscore(df.select_dtypes(include=np.number)))\n",
     "df_no_outliers = df[(z_scores < 3).all(axis=1)]\n",
     "print(\"Before:\", df.shape)\n",
     "print(\"After removing outliers:\", df_no_outliers.shape)"
@@ -197,155 +189,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Age</th>\n",
-       "      <th>Sex</th>\n",
-       "      <th>ChestPainType</th>\n",
-       "      <th>RestingBP</th>\n",
-       "      <th>Cholesterol</th>\n",
-       "      <th>FastingBS</th>\n",
-       "      <th>RestingECG</th>\n",
-       "      <th>MaxHR</th>\n",
-       "      <th>ExerciseAngina</th>\n",
-       "      <th>Oldpeak</th>\n",
-       "      <th>ST_Slope</th>\n",
-       "      <th>HeartDisease</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>40</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>140</td>\n",
-       "      <td>289</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>172</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>2</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>49</td>\n",
-       "      <td>0</td>\n",
-       "      <td>2</td>\n",
-       "      <td>160</td>\n",
-       "      <td>180</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>156</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>37</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>130</td>\n",
-       "      <td>283</td>\n",
-       "      <td>0</td>\n",
-       "      <td>2</td>\n",
-       "      <td>98</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>2</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>48</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>138</td>\n",
-       "      <td>214</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>108</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1.5</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>54</td>\n",
-       "      <td>1</td>\n",
-       "      <td>2</td>\n",
-       "      <td>150</td>\n",
-       "      <td>195</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>122</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>2</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   Age  Sex  ChestPainType  RestingBP  Cholesterol  FastingBS  RestingECG  \\\n",
-       "0   40    1              1        140          289          0           1   \n",
-       "1   49    0              2        160          180          0           1   \n",
-       "2   37    1              1        130          283          0           2   \n",
-       "3   48    0              0        138          214          0           1   \n",
-       "4   54    1              2        150          195          0           1   \n",
-       "\n",
-       "   MaxHR  ExerciseAngina  Oldpeak  ST_Slope  HeartDisease  \n",
-       "0    172               0      0.0         2             0  \n",
-       "1    156               0      1.0         1             1  \n",
-       "2     98               0      0.0         2             0  \n",
-       "3    108               1      1.5         1             1  \n",
-       "4    122               0      0.0         2             0  "
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Encode categorical variables\n",
     "df_encoded = df_no_outliers.copy()\n",
     "label_cols = df_encoded.select_dtypes(include='object').columns\n",
-    "\n",
     "for col in label_cols:\n",
     "    le = LabelEncoder()\n",
-    "    df_encoded[col] = le.fit_transform(df_encoded[col])\n",
-    "\n",
-    "df_encoded.head()"
+    "    df_encoded[col] = le.fit_transform(df_encoded[col])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Split features and target\n",
+    "X = df_encoded.drop(\"HeartDisease\", axis=1)\n",
+    "y = df_encoded[\"HeartDisease\"]"
    ]
   },
   {
@@ -354,10 +218,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Standardize features\n",
     "scaler = StandardScaler()\n",
-    "X = df_encoded.drop(\"HeartDisease\", axis=1)\n",
-    "y = df_encoded[\"HeartDisease\"]\n",
-    "\n",
     "X_scaled = scaler.fit_transform(X)"
    ]
   },
@@ -367,6 +229,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Train/test split\n",
     "X_train, X_test, y_train, y_test = train_test_split(\n",
     "    X_scaled, y, test_size=0.2, random_state=42\n",
     ")"
@@ -374,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -388,6 +251,7 @@
     }
    ],
    "source": [
+    "# Train multiple classifiers\n",
     "models = {\n",
     "    \"Logistic Regression\": LogisticRegression(max_iter=1000),\n",
     "    \"SVM\": SVC(),\n",
@@ -403,7 +267,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Apply PCA (retain 95% of variance)\n",
+    "pca = PCA(0.95)\n",
+    "X_pca = pca.fit_transform(X_scaled)\n",
+    "\n",
+    "X_train_pca, X_test_pca, y_train_pca, y_test_pca = train_test_split(\n",
+    "    X_pca, y, test_size=0.2, random_state=42\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -417,26 +296,13 @@
     }
    ],
    "source": [
-    "pca = PCA(0.95)  # Keep 95% of variance\n",
-    "X_pca = pca.fit_transform(X_scaled)\n",
-    "\n",
-    "X_train_pca, X_test_pca, y_train_pca, y_test_pca = train_test_split(\n",
-    "    X_pca, y, test_size=0.2, random_state=42\n",
-    ")\n",
-    "\n",
+    "# Evaluate models after PCA\n",
     "for name, model in models.items():\n",
     "    model.fit(X_train_pca, y_train_pca)\n",
     "    y_pred_pca = model.predict(X_test_pca)\n",
     "    acc_pca = accuracy_score(y_test_pca, y_pred_pca)\n",
     "    print(f\"{name} Accuracy after PCA: {acc_pca:.4f}\")"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
