--- a/Excercises/Excercise-1.ipynb
+++ b/Excercises/Excercise-1.ipynb
@@ -1,6 +1,18 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Exercise 1 – Home Prices (Linear Regression)\n",
+    "- Predicts house price based on area.  \n",
+    "- Coefficient = price change per square foot.  \n",
+    "- Intercept = base price when area = 0.  \n",
+    "- Pickle/Joblib used to save and reload model.  \n",
+    "- np.array([[5000]]) ensures correct 2D input."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 18,
    "metadata": {},
@@ -831,6 +843,11 @@
     "mj.coef_\n",
     "mj.intercept_"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
