--- a/Excercises/Excercise-10.ipynb
+++ b/Excercises/Excercise-10.ipynb
@@ -1,6 +1,17 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Exercise 10 – Employee Retention\n",
+    "- Predicts if an employee will leave.  \n",
+    "- Logistic regression for classification.  \n",
+    "- Encodes salary/department numerically.  \n",
+    "- Visualizes correlation between features and leaving."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
