--- a/Excercises/Excercise-13.ipynb
+++ b/Excercises/Excercise-13.ipynb
@@ -1,6 +1,17 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Exercise 13 – Titanic Survival Prediction\n",
+    "- Predicts survival using decision tree.  \n",
+    "- Encodes Sex as numeric.  \n",
+    "- Fills missing ages with mean.  \n",
+    "- Accuracy = correct predictions ratio."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
