--- a/Excercises/Excercise-15.ipynb
+++ b/Excercises/Excercise-15.ipynb
@@ -1,6 +1,18 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Exercise 15 – Heart Disease Prediction\n",
+    "- Removes outliers using Z-scores.  \n",
+    "- Encodes categorical features.  \n",
+    "- Scales features for model consistency.  \n",
+    "- PCA reduces dimensions (keeps 95% variance).  \n",
+    "- Compares Logistic, SVM, and Random Forest."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
