--- a/Excercises/Excercise-16.ipynb
+++ b/Excercises/Excercise-16.ipynb
@@ -1,6 +1,17 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Exercise 16 – SVM Digit Classification\n",
+    "- Classifies digits using SVM.  \n",
+    "- Linear vs RBF: straight vs curved boundaries.  \n",
+    "- C controls model flexibility; gamma controls influence range.  \n",
+    "- Finds best C/gamma for highest accuracy."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {},
