--- a/Excercises/Excercise-2.ipynb
+++ b/Excercises/Excercise-2.ipynb
@@ -1,6 +1,16 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Exercise 2 – Canada Income Prediction\n",
+    "- Predicts income from year using linear regression.  \n",
+    "- Red line = regression line (predicted values).  \n",
+    "- Linear model fits continuous trend over time."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 13,
    "metadata": {},
