--- a/Excercises/Excercise-3.ipynb
+++ b/Excercises/Excercise-3.ipynb
@@ -1,6 +1,16 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Exercise 3 – Multi-Variable House Prices\n",
+    "- Features: area, bedrooms, age.  \n",
+    "- Missing bedrooms filled with median.  \n",
+    "- Negative coefficient lowers predicted price."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
