--- a/Excercises/Excercise-5.ipynb
+++ b/Excercises/Excercise-5.ipynb
@@ -1,6 +1,15 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Exercise 5 – Math vs CS Scores\n",
+    "- Predicts CS score from math score.  \n",
+    "- Linear regression shows continuous relationship."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
