--- a/Excercises/Excercise-7.ipynb
+++ b/Excercises/Excercise-7.ipynb
@@ -4,9 +4,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Car Prices Regression\n",
-    "# Method 1: Dummy Variables\n",
-    "# Method 2: One-Hot Encoding"
+    "# Exercise 7 – Car Prices (Dummy & One-Hot Encoding)\n",
+    "- Predicts car price from model, mileage, age.  \n",
+    "- Encodes car model to numeric form.  \n",
+    "- Drops first column to avoid redundancy.  \n",
+    "- OneHotEncoder automates dummy creation."
    ]
   },
   {
