--- a/Excercises/Excercise-9.ipynb
+++ b/Excercises/Excercise-9.ipynb
@@ -1,6 +1,16 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Exercise 9 – Insurance Purchase Prediction\n",
+    "- Predicts if a person buys insurance (yes/no).  \n",
+    "- Logistic regression for binary output.  \n",
+    "- predict_proba gives probability of buying."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -883,13 +893,6 @@
     "print(\"Prediction for age 56:\", model.predict([[56]])[0])\n",
     "print(\"Prediction for age 25:\", model.predict([[25]])[0])"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
