--- a/Excercises/Excercise-11.ipynb
+++ b/Excercises/Excercise-11.ipynb
@@ -1,6 +1,16 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Exercise 11 – Digits Recognition\n",
+    "- Recognizes handwritten digits 0–9.  \n",
+    "- Logistic regression for multiclass classification.  \n",
+    "- Confusion matrix shows correct vs incorrect predictions."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
