--- a/Excercises/Excercise-4.ipynb
+++ b/Excercises/Excercise-4.ipynb
@@ -1,6 +1,16 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Exercise 4 – Hiring Salary Prediction\n",
+    "- Predicts salary using experience, test, interview.  \n",
+    "- Text experience converted to numbers.  \n",
+    "- Missing data filled with median values."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
