--- a/Excercises/Excercise-6.ipynb
+++ b/Excercises/Excercise-6.ipynb
@@ -1,6 +1,16 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Exercise 6 – Gradient Descent vs Scikit-Learn\n",
+    "- Gradient descent minimizes cost by adjusting slope/intercept.  \n",
+    "- Compared to sklearn to confirm accuracy.  \n",
+    "- Cost = model prediction error."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
@@ -11,6 +21,11 @@
     "import math\n",
     "from sklearn import linear_model"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   },
   {
    "cell_type": "code",
