--- a/Excercises/Excercise-8.ipynb
+++ b/Excercises/Excercise-8.ipynb
@@ -1277,11 +1277,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'tk' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mNameError\u001b[39m                                 Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[1]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m \u001b[38;5;28;01mclass\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mCustomCombobox\u001b[39;00m(\u001b[43mtk\u001b[49m.Frame):\n\u001b[32m      2\u001b[39m     \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34m__init__\u001b[39m(\u001b[38;5;28mself\u001b[39m, master, values, variable, **kwargs):\n\u001b[32m      3\u001b[39m         \u001b[38;5;28msuper\u001b[39m().\u001b[34m__init__\u001b[39m(master, **kwargs)\n",
+      "\u001b[31mNameError\u001b[39m: name 'tk' is not defined"
+     ]
+    }
+   ],
    "source": [
-    "# Comboox for MacOS Silicon\n",
     "class CustomCombobox(tk.Frame):\n",
     "    def __init__(self, master, values, variable, **kwargs):\n",
     "        super().__init__(master, **kwargs)\n",
